<resources>
    <string name="app_name">Survey</string>
    <string name="url_global">https://sleepy-ravine-58079.herokuapp.com/api/</string>
    <string name="intro_nuestro_titulo">Nuestro Servicio</string>
    <string name="intro_dinamic_survey">Dinamic Survey </string>
    <string name="intro_nuestro_texto"><b>Dinamic Survey</b> es una app de encuestas personalizadas que permite un diseño atractivo y amistoso, al mismo tiempo permite analizar y tener de una manera organizada los resultados de tus encuestas.</string>
    <string name="intro_trabajando_titulo">Trabajando sin Internet</string>
    <string name="intro_trabajando_texto">Contamos con un sistema simple y sencillo que tiene la capacidad de trabajar sin internet, permite realizar encuestas que se sincronizarán al conectarse a internet.</string>
    <string name="intro_tipos_titulo">Tipos de Preguntas</string>
    <string name="intro_tipos_texto">Ofrecemos más de 50 tipos de preguntas y respuestas personalizables, incluyendo opción multiple.</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_usuario">Usuario</string>
    <string name="login_hint_password_error">Password es un campo necesario</string>
    <string name="login_hint_usuario_error">Usuario es un campo necesario</string>
    <string name="login_signin">Iniciar Sesión</string>
    <string name="login_dialog_titulo">Iniciar Sesión</string>
    <string name="login_credenciales_invalidas">Usuario o Contraseña no válidos. Verifique sus credenciales.</string>
    <string name="login_titulo_dialogo">Iniciar Sesión</string>
    <string name="encuesta_boton_texto">Enviar Respuestas</string>
    <string name="encuesta_edittext_hint">Escribe tu respuesta</string>
    <string name="encuesta_dialog_titulo">Encuesta</string>
    <string name="encuestra_dialgo_texto_mal">Ocurrio un error al Enviar sus Respuestas, intente nuevamente.</string>
    <string name="encuestra_dialgo_texto_bien">Respuestas Enviadas Satisfactoriamente!.</string>
    <string name="lista_dialogo_texto_mal">Ha ocurrido un error. Intente nuevamente</string>
    <string name="lista_dialogo_titulo">Encuestas</string>
    <string name="menu_surveys">Surveys</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_idioma">Idioma</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_soporte">Soporte</string>
    <string name="menu_preguntas">Preguntas Frecuentes</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="aboutus_about">Acerca De</string>
    <string name="aboutus_version">App Versión</string>
    <string name="aboutus_text">
Social Survey está integrado con un back office para hacer nuestras encuestas en línea, fuera de offline-compatible.
Descarga la aplicación para Android de Google Play y conecta tus encuestas con la oficina de respaldo. Todas las encuestas que están en su back office estarán disponibles en su dispositivo. Todos los datos recopilados en tu dispositivo Android se pueden sincronizar con tu cuenta en línea</string>
    <string name="aboutus_appversion">App version</string>
    <string name="aboutus_terminos">Todos los derechos reservados Social surveys 2016</string>
    <string name="support_title">Soporte</string>
    <string name="support_mail">Correo</string>
    <string name="support_faq">FAQ</string>
    <string name="support_phone">Teléfono</string>
    <string name="support_number">(998) 892 0251</string>
    <string name="support_correo">info@socialastronauts.com</string>
    <string name="login_dialogo_titulo">Survey Login</string>
    <string name="login_dialog_text_mal">Un error ha ocurrido. Intente nuevamente.</string>
    <string name="login_aviso">Revisa el aviso de Privacidad aqui</string>
    <string name="lenguage_dialog_title">Elige un Idioma</string>
    <string name="lenguage_dialog_esp">Español</string>
    <string name="lenguage_dialog_en">Ingles</string>
    <string name="lista_welcome">Bienvenid@</string>
    <string name="lista_creado">Creado</string>
    <string name="send_survey_title">Enviar Encuesta</string>
    <string name="send_survey_done">¡Se ha enviado la encuesta con éxito!</string>
    <string name="send_survey_notsend">Ha ocurrido un error al enviar la encuesta, Intente nuevamente.</string>
    <string name="send_survey_noconnection">No cuentas con conexion a internet, la encuesta se enviará automaticamente cuando se establezca la conexión</string>
    <string name="send_survey_oldsended">Se han enviado las encuestas pendientes por enviar.</string>
    <string name="send_survey_fecha">Selecciona una fecha</string>
    <string name="send_survey_sizeinvalid">Faltan preguntas por contestar.</string>
    <string name="aviso_titulo"><b>AVISO DE PRIVACIDAD</b></string>
</resources>