<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/aboutus_logo"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aboutus_terminos"
        android:textColor="@color/survey_text"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aboutus_version"
        android:textColor="@color/survey_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/survey_text"
        android:layout_marginTop="10dp"
        android:text="@string/aboutus_about"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/survey_text"
        android:textSize="@dimen/textApparence"
        android:text="@string/aboutus_text"
        android:id="@+id/textView" />

</LinearLayout>